# freebot-example

./: .clang-format  .editorcofig  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  license  prj.conf  readme.md  west.yml
app/: CMakeLists.txt  prj.conf  west.yml
app/src/: main.c
ci/: .gitlab-ci.yml
src/: main.c
